set functions for reset Password

--- a/src/app/main-content/login/reset-password/reset-password.component.html
+++ b/src/app/main-content/login/reset-password/reset-password.component.html
@@ -10,7 +10,7 @@
                     <app-input-field formControlName="confirmPassword" type="password" icon="lock" placeholder="Password" minlength="8" [required]="true"></app-input-field>
                 </div>
                 <div class="button-collection">
-                    <button [disabled]="!myFormResetPassword.valid && myFormResetPassword.value.setNewPassword != myFormResetPassword.value.confirmPassword" >Save new Password</button>
+                    <button [disabled]="!myFormResetPassword.valid" (click)="setNewPassword()">Save new Password</button>
                 </div>
             </div>
         </div>
