--- a/src/app/main-content/login/sign-up/sign-up.component.scss
+++ b/src/app/main-content/login/sign-up/sign-up.component.scss
@@ -38,8 +38,6 @@ button{
     }
 }
 
-
-
 .specialButton{
     background-color: transparent;
     border-color: var(--purple-2);
@@ -73,6 +71,10 @@ p{
     @include heightWidth($w: 75%, $h: auto);
     @include figtree($fw: 400, $fs: clamp(16px,4vw,18px), $c: var(--text-black));
     text-align: center;
+    padding-bottom: 8px;
+    @include respond-to-maxWidth(smallMedium) {
+        padding-bottom: 16px;
+    }
 }
 
 a{
@@ -91,10 +93,24 @@ a{
     }
 }
 
+.errorBox{
+    height: 36px;
+    display: flex;
+    align-items: center;
+    vertical-align: middle;
+    width: 75%;
+    @include figtree($fw: 400, $fs: clamp(16px,4vw,18px), $c: red);
+    padding-bottom: 8px;
+    span{
+        padding-left: 16px;
+    }
+}
+
 .set-right{
     width: 75%;
     display: flex;
     justify-content: flex-end;
+    padding-bottom: 32px;
 
     @include respond-to-maxWidth(medium) {
         justify-content: center;
@@ -132,5 +148,116 @@ a{
         color: var(--text-blue);
         border-color: var( --purple-3);
         cursor: pointer;
+    }
+
+    @include respond-to-maxWidth(smallMedium) {
+        top: 4px;
+     }
+}
+
+.flowBox{
+    width: calc(75% - 26px);
+    @include dFlex;
+    flex-direction: row-reverse;
+    margin-left: 26px;
+
+    .labelText{
+        @include figtree($fw: 400, $fs: clamp(16px,4vw,18px), $c: var(--text-black));
+        padding-left: 56px;
+    }
+
+    a{
+        background: none;
+        @include figtree($fw: 400, $fs: clamp(16px,4vw,18px), $c: var(--purple-3));
+        text-decoration: none;
+        padding: 0;
+        margin: 0;
+        border: none;
+
+        &:hover{
+            text-decoration: underline;
+            color: var(--text-blue);
+        }
+    }
+}
+
+.checkbox-Box{
+    display: flex;
+    justify-content:flex-end;
+    align-items: center;
+
+    .checkbox-container{
+        height: 100%;
+        position: relative;
+        user-select: none;
+        display: block;
+    }
+
+    .originCheckbox {
+        z-index: 99;
+        height: 29px;
+        width: 29px;
+        position: absolute;
+        top: -12px;
+        opacity: 0;
+        cursor: pointer;
+    }
+
+    label{
+        font-size: clamp(16px, 2vw, 18px);
+    }
+
+    .customCheckBox{
+        position: absolute;
+        top: calc((100% - 29px) / 2);
+        left: 0;
+        height: 29px;
+        width: 29px;
+        border: 1px solid var(--purple-3);
+        border-radius: 6px;
+    }
+
+    &:hover .originCheckbox  ~  .customCheckBox{
+        border-color: var(--text-blue);
+        background-color: transparent;
+        &::before{
+            color: var(--text-blue);
+        }
+    }
+
+    .customCheckBox{
+        &::before{
+            padding-top: 2px;
+            padding-left: 1px;
+            @include figtree($fw: 100, $fs: 21px, $c: var(--purple-3));
+            content: "✔";
+            position: absolute;
+            display: none;
+            
+        }
+    }
+
+    .originCheckbox:checked ~ .customCheckBox:before{
+        height: 29px;
+        width: 29px;
+        margin-top: -1px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    p{
+        user-select: none;
+        padding-left: 16px;
+        font-size: 21px;
+    }
+
+    .labelText{
+        display: inline;
+        width: 60%;
+        span{
+            width: 100%;
+            display: inline;
+        }
     }
 }
