--- a/src/app/main-content/login/reset-password/reset-password.component.scss
+++ b/src/app/main-content/login/reset-password/reset-password.component.scss
@@ -1,10 +1,7 @@
 @import '../../../../mixin.scss';
 .MainWrapper{
-    @include heightWidth($w: 100%, $h: 95dvh);
+    @include heightWidth($w: 100%, $h: 100dvh);
     @include dFlex;
-    flex-direction: column;
-    justify-content:flex-start;
-    gap: 1%;
 }
 
 
@@ -13,8 +10,10 @@
 }
 
 .whiteBox{
+    margin-top: auto;
+    margin-bottom: auto;
     position: relative;
-    @include heightWidth($w: 100%, $h: 100%);
+    @include heightWidth($w: 100%, $h: auto);
     @include dFlex($jc: space-between);
     max-width: 600px;
     background-color: var(--secundary-bg);
@@ -24,7 +23,6 @@
     max-height: 65dvh;
     box-shadow: 0px 2px 3px rgba(16, 0, 159, 0.1);
     overflow-y: scroll;
-    margin-top: calc(148px);
     @include respond-to-maxWidth(medium) {
         @include heightWidth($w: 90%, $h: 100%);
     }
@@ -44,7 +42,7 @@ app-input-field{
 button{
     @include figtree($fw: 400, $fs: clamp(16px,4vw,18px), $c: var(--secundary-bg));
     min-width: clamp(125px, 4vw, 160px);
-    margin: 18px 8px 0px 8px;
+    margin: 24px 0px 0px 0px;
     height: calc(60px - 16px);
     border-radius: 36px;
     padding: 8px 16px;
@@ -79,7 +77,7 @@ button{
 }
 
 .button-collection{
-    @include dFlex ($jc: center);
+    @include dFlex ($jc: end);
     gap: 2%;
     @include heightWidth($w: 75%, $h: auto);
 
@@ -93,12 +91,16 @@ button{
     @include heightWidth($w: 100%, $h: auto);
     @include dFlex ();
     flex-direction: column;
+    position: relative;
 }
 
 
 h1{
     @include figtree($fw: 600, $fs: clamp(42px,8vw,56px), $c: var(--purple-3));
     margin-bottom: clamp(0px,4vw,18px);
+    text-align: center;
+    vertical-align: middle;
+    padding: 0px 64px;
 }
 
 p{
@@ -129,3 +131,46 @@ a{
     flex-direction: column;
 }
 
+.error-messages {
+    position: absolute;
+    top:-10px;
+    height: 36px;
+    @include dFlex ($jc: start);
+    @include figtree($fw: 400, $fs: clamp(16px, 4vw, 18px));
+    color: red;
+    width: calc(75% - 36px);
+  }
+
+  .flow{
+    position: relative;
+    margin-left: -2px;
+    @include heightWidth($w: 90%, $h: 100%);
+    @include dFlex;
+    align-items: center;
+}
+
+  .step-back-button{
+    @include materialSymbols;
+    font-size: 24px;
+    color: var(--text-black);
+    text-align: center;
+    @include dFlex;
+    border-radius: 50%;
+    padding: 13px 13px;
+    border: 1px solid transparent;
+    position: absolute;
+
+    top: 8px;
+    left: 0px;
+
+    &:hover{
+        color: var(--text-blue);
+        border-color: var( --purple-3);
+        cursor: pointer;
+        background-color: transparent;
+    }
+
+    @include respond-to-maxWidth(smallMedium) {
+        top: 4px;
+     }
+}
