--- a/src/app/main-content/message/message.component.html
+++ b/src/app/main-content/message/message.component.html
@@ -1,9 +1,9 @@
 <div class="new-message-container" [ngClass]="thread ? 'border-none' : 'border-top'">
     <div class="hover" (mousemove)="isMessageHover = true" (mouseleave)="resetHoverAndMenu()"
-        [ngClass]="auth.checkUser(message) ? 'row-reverse' : ''">
+        [ngClass]="messageService.checkUser(message) ? 'row-reverse' : ''">
 
         <img class="profile-image" src="{{message.profileImage}}" alt=""
-            [ngStyle]="auth.checkUser(message) ? { 'margin-left' : '30px' } : { 'margin-right' : '30px' }">
+            [ngStyle]="messageService.checkUser(message) ? { 'margin-left' : '30px' } : { 'margin-right' : '30px' }">
 
         <div class="message-container" [ngStyle]="isEdit ? {'width': '100%'} : {'width': 'auto'}">
             <app-message-name [message]="message"></app-message-name>
