removing console.log

--- a/src/app/main-content/login/choose-avatar/choose-avatar.component.html
+++ b/src/app/main-content/login/choose-avatar/choose-avatar.component.html
@@ -17,7 +17,7 @@
         <div><img src="./img/profile-pic/006.svg"></div>
     </div>
     <div class="set-left">
-        <p>Or you can</p><button class="specialButton">Upload foto</button> 
+        <p>Or you can</p><input class="specialButton" accept=" image/*, .pdf, .docx" type="file" id="myfile" name="myfile">
     </div>
         <div class="set-right"> <button (click)="sendClickToParentPageCounter(3)">Create Account</button> </div>
 
