--- a/src/app/main-content/login/sign-up/sign-up.component.html
+++ b/src/app/main-content/login/sign-up/sign-up.component.html
@@ -25,6 +25,6 @@
                     </div>
             </div>
             </div>
-            <div class="set-right"> <button [disabled]="!myForm.valid" (click)="onSubmit(2)" >Go On</button> </div>
+            <div class="set-right"> <button [disabled]="!myForm.valid" (click)="checkForEmail()" >Go On</button> </div>
         </div>
 </div>
