--- a/src/app/main-content/message/message-options/message-options.component.html
+++ b/src/app/main-content/message/message-options/message-options.component.html
@@ -7,6 +7,6 @@
 
   <div class="edit-message-menu" *ngIf="isMessageEditMenuOpen">
     <button (click)="toggleEditMode()">Bearbeiten</button>
-    <button (click)="onDelete()">Löschen</button>
+    <button (click)="handleOnDelete()">Löschen</button>
   </div>
 </div>
