--- a/src/app/main-content/thread/thread-message-field/thread-message-field.component.html
+++ b/src/app/main-content/thread/thread-message-field/thread-message-field.component.html
@@ -19,10 +19,10 @@
       <div class="message-options-container">
   
         <div class="options-btn">
-          <label for="file-upload" class="flie-label">
+          <label for="file-upload-thread" class="flie-label">
             <mat-icon class="open-file">add</mat-icon>
           </label>
-          <input id="file-upload" type="file" [(ngModel)]="imageUploads" (change)="onFileSelected($event)" multiple>
+          <input id="file-upload-thread" type="file" [(ngModel)]="imageUploadsThread" (change)="onFileSelected($event)" multiple>
   
   
           <div class="between-line"></div>
