--- a/src/app/main-content/chat/chat-message-field/images-preview/images-preview.component.scss
+++ b/src/app/main-content/chat/chat-message-field/images-preview/images-preview.component.scss
@@ -7,6 +7,30 @@
     right: 20px;
     left: 20px;
     box-sizing: border-box;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    padding-bottom: 10px;
+
+    /* Custom scrollbar styling */
+    &::-webkit-scrollbar {
+      height: 6px; /* Breite der Scrollbar */
+  }
+
+  &::-webkit-scrollbar-track {
+      background-color: transparent; /* Transparenter Track */
+  }
+
+  &::-webkit-scrollbar-thumb {
+      background-color: var(--primary-bg); /* Farbe des Thumbs */
+      border-radius: 30px; /* Rundungen für den Thumb */
+      transition: background-color 0.125s ease; /* Sanfter Übergang beim Hover */
+  }
+
+  &::-webkit-scrollbar-thumb:hover {
+      background-color: var(--primary-bg-dark); /* Hover-Farbe des Thumbs */
+      cursor: grab;
+  }
+   
 }
 
 .image-container {
@@ -18,7 +42,7 @@
     position: relative;
 
     img {
-        width: 100%;
+        width: 130px;
         height: 100%;
         object-fit: cover;
         border-radius: 5px;
