--- a/src/app/main-content/thread/thread-message-field/thread-images-preview/thread-images-preview.component.scss
+++ b/src/app/main-content/thread/thread-message-field/thread-images-preview/thread-images-preview.component.scss
@@ -7,6 +7,29 @@
     right: 20px;
     left: 20px;
     box-sizing: border-box;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    padding-bottom: 10px;
+
+      /* Custom scrollbar styling */
+      &::-webkit-scrollbar {
+        height: 6px; /* Breite der Scrollbar */
+    }
+
+    &::-webkit-scrollbar-track {
+        background-color: transparent; /* Transparenter Track */
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background-color: var(--primary-bg); /* Farbe des Thumbs */
+        border-radius: 30px; /* Rundungen für den Thumb */
+        transition: background-color 0.125s ease; /* Sanfter Übergang beim Hover */
+    }
+
+    &::-webkit-scrollbar-thumb:hover {
+        background-color: var(--primary-bg-dark); /* Hover-Farbe des Thumbs */
+        cursor: grab;
+    }
 }
 
 .image-container {
@@ -16,9 +39,10 @@
     border-radius: 5px;
     margin-right: 20px;
     position: relative;
+    background: var(--primary-bg);
 
     img {
-        width: 100%;
+        width: 130px;
         height: 100%;
         object-fit: cover;
         border-radius: 5px;
