add additional members to channel window

--- a/src/app/dialog/create-channel/choose-members-create-channel/choose-members-create-channel.component.html
+++ b/src/app/dialog/create-channel/choose-members-create-channel/choose-members-create-channel.component.html
@@ -25,7 +25,7 @@
                 </div>
             </mat-chip-row>
             <input
-                placeholder="Neues Mitglied..."
+                placeholder="New Member..."
                 [matChipInputFor]="chipGrid"
                 [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
                 [matChipInputAddOnBlur]="addOnBlur"
