--- a/src/app/main-content/devspace/devspace.component.scss
+++ b/src/app/main-content/devspace/devspace.component.scss
@@ -276,13 +276,16 @@ h3 {
     display: flex;
     gap: 10px;
     transition: transform 0.125s ease-in-out, color 0.125s ease-in-out;
-
+    .material-icons {
+        transition: transform 0.125s ease-in-out, color 0.125s ease-in-out;
+    }
     &:hover {
         color: var(--purple-1);
         cursor: pointer;
-
         .material-icons {
             transform: scale(1.1);
+            color: var(--purple-1);
+
         }
     }
 }
