--- a/src/app/dialog/profile/profile.component.scss
+++ b/src/app/dialog/profile/profile.component.scss
@@ -11,7 +11,6 @@
     border-top-right-radius: 0px !important;
 }
 
-/* Nur für diesen spezifischen Dialog */
 .custom-dialog .mat-mdc-dialog-surface {
     width: auto !important;
     height: auto !important;
@@ -20,7 +19,6 @@
 }
 
 .card{
-    border-top-right-radius: 0px;
     @include padding(45px, 40px, 45px, 40px);
     @include dFlex(start, center);
    gap: 38px; 
@@ -146,20 +144,19 @@ a{
   }
   
   .fileInput input[type="file"] {
-    display: none;  /* Hides the file input */
+    display: none;
   }
   
-  
   .fileInput button {
-    padding: 0; /* Entfernt unnötige Innenabstände */
+    padding: 0; 
   }
   
   .fileInput mat-icon {
-    font-size: 24px; /* Passen Sie die Icon-Größe nach Bedarf an */
-    color: #3f51b5; /* Wählen Sie eine Farbe für das Icon */
-    cursor: pointer; /* Zeigt an, dass es anklickbar ist */
+    font-size: 24px; 
+    color: #3f51b5; 
+    cursor: pointer; 
   }
   
   .fileInput button:hover mat-icon {
-    color: #1a73e8; /* Optionale Hover-Farbe für das Icon */
+    color: #1a73e8; 
   }
