--- a/src/app/main-content/chat/chat-header/chat-header.component.scss
+++ b/src/app/main-content/chat/chat-header/chat-header.component.scss
@@ -59,12 +59,14 @@ section {
     }
 }
 
+
+
+
 .add-members-container {
     @include heightWidth($w: auto, $h: 100%);
     @include dFlex($ai: center, $jc: space-between);
-
     .active-members-image-container {
-
+        display: flex;
         img {
             @include heightWidth($w: 35px, $h: 35px);
             @include image($br: 50%);
@@ -82,17 +84,43 @@ section {
         @include heightWidth($w: 40px, $h: 40px);
         @include dFlex();
         border: none;
-        background-color: var(--secundary-bg);
+        background-color: var(--primary-bg);
         border-radius: 100%;
         cursor: pointer;
+        padding: 24px;
+        mat-icon{
+            transition: color 0.125s ease-in-out, transform 0.125s ease-in-out;
+            padding: 16px;
 
-        &:hover {
-            background-color: var(--primary-bg);
         }
+        &:hover {
+            cursor: pointer;
+            mat-icon{
+                transform: scale(1.2);
+                color: var(--purple-1);
+            }
+        }
+
     }
 }
 
-
+.showMemberListButtonContainer{
+    @include dFlex($ai: center, $jc: space-between);
+    @include padding(8px, 20px, 8px, 8px);
+    border-radius: 50px;
+    @include dFlex($ai: center, $jc: space-between);
+    transition: background-color 0.125s ease-in-out;
+    p{
+        transition: color 0.125s ease-in-out;
+    }
+    &:hover {
+        background-color: var(--primary-bg);
+        cursor: pointer;
+        p{
+            color: var(--purple-1) !important;
+        }
+    }
+}
 
 mat-icon {
     @include dFlex();
