--- a/src/app/main-content/message/message-answer/message-answer.component.html
+++ b/src/app/main-content/message/message-answer/message-answer.component.html
@@ -1,6 +1,5 @@
 <div class="answer-container" [ngClass]="messageService.checkUser(message) ? 'flex-end' : 'flex-start'">
     <p class="answer" (click)="openThread()">
-        <!-- {{message.answers.length}}  -->
-       0 Anwtorten</p>
-    <p class="answer-time">Letze Antwort 14:56</p>
+       {{message.answers}} Anwtorten</p>
+    <p class="answer-time" *ngIf="message.lastAnswer">Letze Antwort {{message.lastAnswer}}</p>
 </div>
