--- a/src/app/main-content/login/choose-avatar/choose-avatar.component.scss
+++ b/src/app/main-content/login/choose-avatar/choose-avatar.component.scss
@@ -10,6 +10,8 @@
     @include heightWidth($w: 30%, $h: auto);
     margin-bottom: 8px;
     img{
+        object-fit: cover;
+        aspect-ratio: 1/1;
         width: 100%;
         border-radius: 50%;
     }
@@ -30,6 +32,8 @@
         max-width: 68px;
         img{
             width: 100%;
+            object-fit: cover;
+            aspect-ratio: 1/1;
             border-radius: 50%;
             border: 3px solid transparent;
             &:hover{
@@ -95,8 +99,9 @@ button{
     border-radius: 50%;
     overflow: hidden;
     img{
+        object-fit: cover;
+        aspect-ratio: 1/1;
         width: 100%;
-        object-fit: contain;
     }
 }
 
