--- a/src/app/main-content/login/sign-up/sign-up.component.scss
+++ b/src/app/main-content/login/sign-up/sign-up.component.scss
@@ -106,6 +106,17 @@ a{
     }
 }
 
+.emailSection{
+    @include heightWidth($w: 100%, $h: auto);
+    @include dFlex;
+    flex-direction: column;
+    position: relative;
+    .errorBox{
+        position: absolute;
+        top: -10px;
+    }
+}
+
 .set-right{
     width: 75%;
     display: flex;
